--- a/index.html
+++ b/index.html
@@ -1,35 +1,354 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+    />
+    <link rel="stylesheet" href="/src/css/style.css" />
     <title>Document</title>
-</head>
-<body>
-<main>
-    <!-- header and sidebor -->
-    <div class="fixed-sections">
+  </head>
+  <body>
+    <main>
+      <!-- -------------------------------------------------- -->
+      <!-- sidebor section  -->
+      <section class="sidebor">
+        <!-- logo -->
+        <div class="logo-sidebor">
+          <div class="img-header">
+            <img src="/src/image/book_8108155.png" alt="image-logo" />
+          </div>
+          <h2>پلانیت</h2>
+        </div>
 
-        <!-- sidebor section  -->
-        <section class="sidebor"></section>
+        <!-- Opstions -->
+        <ul class="container-opstions-sidbor">
+          <li>
+            <i class="ri-home-4-fill"></i>
+            <p>خانه</p>
+          </li>
+          <li>
+            <i class="ri-calendar-todo-fill"></i>
+            <p>تقویم</p>
+          </li>
+          <li>
+            <i class="ri-building-2-fill"></i>
+            <p>شاخص</p>
+          </li>
+          <li>
+            <i class="ri-building-2-fill"></i>
+            <p>بهره وری</p>
+          </li>
+        </ul>
 
-        <!-- header section  -->
-        <section class="header"></section>
-    </div>
+        <!-- OPSTION-->
+        <div class="opstions">
+          <div class="menu-item" onclick="toggleMenu('favorite')">
+            <span class="icon"><i class="ri-star-fill"></i></span>
+            <span class="label">موردعلاقه</span>
+            <span class="arrow" id="arrow-favorite">></span>
+          </div>
+          <div class="submenu" id="favorite">
+            <div class="submenu-item">Project A</div>
+            <div class="submenu-item">Project B</div>
+          </div>
 
-     <!-- Other section  {my tasks and project , todo list}-->
-    <div class="container-var">
-        <!-- my tasks section  -->
-        <section class="my-tasks"></section>
+          <!-- Workspace -->
+          <div class="menu-item" onclick="toggleMenu('workspace')">
+            <span class="icon"><i class="ri-rocket-fill"></i></span>
+            <span class="label">Workspace</span>
+            <span class="arrow" id="arrow-workspace">></span>
+          </div>
+          <div class="submenu" id="workspace">
+            <div class="submenu-item">Team Files</div>
+            <div class="submenu-item">Shared Items</div>
+          </div>
+        </div>
 
-        <!-- project section -->
-        <section class="project"></section>
+        <div class="upgrade"></div>
 
+        <div class="logout-sidebor">
+          <a class="logout" href="./src/login/login.html">
+            <i class="ri-logout-box-line"></i>
+            <h3>خروج</h3>
+          </a>
+        </div>
+      </section>
+
+      <!-- -------------------------------------------------- -->
+      <!-- header section  -->
+      <header>
+        <div class="header">
+          <!-- text header -->
+          <div class="text-header">
+            <h3>خانه</h3>
+            <div class="border-text"></div>
+          </div>
+          <!-- searchbox and other -->
+          <div class="other-header">
+            <!-- profile img -->
+            <div class="img-header">
+              <img src="/src/image/book_8108155.png" alt="" />
+            </div>
+            <i class="ri-notification-2-line i-header"></i>
+            <i class="ri-add-circle-line i-header"></i>
+            <div class="search-box">
+              <i class="ri-search-line"></i>
+              <input
+                type="search"
+                class="search-header"
+                placeholder="جست و جو"
+                required
+              />
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- -------------------------------------------------- -->
+      <!-- Other section  {my tasks and project , todo list}-->
+      <div class="container-var">
+        <!-- my tasks and projects section  -->
+        <div class="container-tasks-projects">
+          <!-- -------------------------------------------------- -->
+          <!-- my tasks section  -->
+          <section class="my-tasks">
+            <!-- text top -->
+            <div class="text-mytask">
+              <h2>برنامه های من</h2>
+              <a href="">نمایش همه</a>
+            </div>
+            <!-- list update -->
+            <ul class="list-update">
+              <li>
+                <div class="cont-main">
+                  <div class="con-ta">
+                    <div class="cercle"></div>
+                  </div>
+                  <!-- main -->
+                  <div class="cont-text">
+                    <p>Update</p>
+                    <div class="create">
+                      <i class="ri-calendar-todo-fill"></i>
+                      <p>Create</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="fitnes-app">
+                  <p>fitnes App</p>
+                </div>
+              </li>
+              <li>
+                <div class="cont-main">
+                  <div class="con-ta">
+                    <div class="cercle"></div>
+                  </div>
+                  <!-- main -->
+                  <div class="cont-text">
+                    <p>Update</p>
+                    <div class="create">
+                      <i class="ri-calendar-todo-fill"></i>
+                      <p>Create</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="fitnes-app">
+                  <p>fitnes App</p>
+                </div>
+              </li>
+              <li>
+                <div class="cont-main">
+                  <div class="con-ta">
+                    <div class="cercle"></div>
+                  </div>
+                  <!-- main -->
+                  <div class="cont-text">
+                    <p>Update</p>
+                    <div class="create">
+                      <i class="ri-calendar-todo-fill"></i>
+                      <p>Create</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="fitnes-app">
+                  <p>fitnes App</p>
+                </div>
+              </li>
+              <li>
+                <div class="cont-main">
+                  <div class="con-ta">
+                    <div class="cercle"></div>
+                  </div>
+                  <!-- main -->
+                  <div class="cont-text">
+                    <p>Update</p>
+                    <div class="create">
+                      <i class="ri-calendar-todo-fill"></i>
+                      <p>Create</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="fitnes-app">
+                  <p>fitnes App</p>
+                </div>
+              </li>
+            </ul>
+          </section>
+
+          <!-- -------------------------------------------------- -->
+          <!-- project section -->
+          <section class="projects">
+            <div class="text-mytask tasks-pro">
+              <h2>پروژه ها</h2>
+              <a href="./src/taskpage/task.html">نمایش همه</a>
+            </div>
+            <!-- main section -->
+            <div class="cont-pro">
+              <div class="container-project">
+                <div class="items count-1">
+                  <div class="img-pro"></div>
+                  <div class="text-pro">
+                    <p class="P-item">lorem is not dd</p>
+                    <div class="item-con">
+                      <h4>فیتنس</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                      </p>
+                    </div>
+                    <div class="button-item"><a href="">ادامه نمایش</a></div>
+                  </div>
+                </div>
+
+                <div class="items count-2">
+                  <div class="img-pro"></div>
+                  <div class="text-pro">
+                    <p class="P-item">lorem is not dd</p>
+                    <div class="item-con">
+                      <h4>فیتنس</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                      </p>
+                    </div>
+                    <div class="button-item"><a href="">ادامه نمایش</a></div>
+                  </div>
+                </div>
+
+                <div class="items">
+                  <div class="img-pro"></div>
+                  <div class="text-pro">
+                    <p class="P-item">lorem is not dd</p>
+                    <div class="item-con">
+                      <h4>فیتنس</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit
+                      </p>
+                    </div>
+                    <div class="button-item"><a href="">ادامه نمایش</a></div>
+                  </div>
+                </div>
+
+                <div class="items item-new">
+                  <div class="text-newpro">
+                    <i class="ri-add-fill"></i>
+                    <h3>ایجاد یک پروژه جدید</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+        <!-- -------------------------------------------------- -->
         <!-- todo list section -->
-        <section class="toDo"></section>
-    </div>
-</main>
-<script src="/src/js/script.js"></script>
-</body>
+        <div class="main-todo">
+          <section class="todo">
+            <!-- text hedear-->
+            <div class="todo-text">
+              <h3>انجام دادن</h3>
+              <div class="icon-todo-text">
+                <i class="ri-add-fill plus"></i>
+                <i class="ri-more-fill more"></i>
+              </div>
+            </div>
+            <!-- plannig -->
+            <div class="container-planning">
+              <!-- button -->
+              <div class="planning-cont">برنامه ریزی</div>
+              <div class="cont-text-todo">
+                <p>بروز رسانی فهرست نیازمندی ها</p>
+                <p class="create">ایجاد محتوا برای برنامه peceland</p>
+                <div class="date">Sep 20, 2025</div>
+                <!-- comment -->
+                <div class="cont-comment">
+                  <!-- comment -->
+                  <div class="com">
+                    <i class="ri-chat-1-line"></i>
+                    <p>4 کامنت</p>
+                  </div>
+                  <!--file -->
+                  <div class="file">
+                    <i class="ri-link-m"></i>
+                    <p>11 پرونده</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- design -->
+            <div class="container-planning">
+              <!-- button -->
+              <div class="planning-cont dis-text">طراحی</div>
+              <!-- img -->
+              <div class="img-design"></div>
+              <div class="cont-text-todo">
+                <p>بروز رسانی فهرست نیازمندی ها</p>
+                <p class="create">ایجاد محتوا برای برنامه peceland</p>
+                <div class="date">Sep 20, 2025</div>
+                <!-- comment -->
+                <div class="cont-comment">
+                  <!-- comment -->
+                  <div class="com">
+                    <i class="ri-chat-1-line"></i>
+                    <p>4 کامنت</p>
+                  </div>
+                  <!--file -->
+                  <div class="file">
+                    <i class="ri-link-m"></i>
+                    <p>11 پرونده</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- plannig -->
+            <div class="container-planning">
+              <!-- button -->
+              <div class="planning-cont">برنامه ریزی</div>
+              <div class="cont-text-todo">
+                <p>بروز رسانی فهرست نیازمندی ها</p>
+                <p class="create">ایجاد محتوا برای برنامه peceland</p>
+                <div class="date">Sep 20, 2025</div>
+                <!-- comment -->
+                <div class="cont-comment">
+                  <!-- comment -->
+                  <div class="com">
+                    <i class="ri-chat-1-line"></i>
+                    <p>4 کامنت</p>
+                  </div>
+                  <!--file -->
+                  <div class="file">
+                    <i class="ri-link-m"></i>
+                    <p>11 پرونده</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+    <script src="/src/js/script.js"></script>
+  </body>
 </html>
