refactor: improve API functions and enhance delete functionality with alert

--- a/src/taskpage/task.html
+++ b/src/taskpage/task.html
@@ -152,7 +152,7 @@
             <div class="container-item" id="backlog-drop"></div>
           </div>
           <!--todo -->
-          <div class="todo-task sections"   data-status="do">
+          <div class="todo-task sections" data-status="do">
             <!-- text -->
             <div class="text-task">
               <h3>انجام دادن</h3>
@@ -165,7 +165,7 @@
             <div class="container-item" id="todo-drop"></div>
           </div>
           <!-- in progress -->
-          <div class="in-progress sections"  data-status="doing">
+          <div class="in-progress sections" data-status="doing">
             <!-- text -->
             <div class="text-task">
               <h3>درحال انجام</h3>
@@ -178,7 +178,7 @@
             <div class="container-item" id="in-progress-drop"></div>
           </div>
           <!-- review -->
-          <div class="review sections"   data-status="complete">
+          <div class="review sections" data-status="complete">
             <!-- text -->
             <div class="text-task">
               <h3>بررسی</h3>
@@ -194,6 +194,9 @@
       </div>
       <div class="section-addtodo"></div>
     </main>
+    <div class="alert">
+      <p>فعالیت با موفقیت حذف شد.💥</p>
+    </div>
     <script src="./task.js" type="module"></script>
   </body>
 </html>
